<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="permissions_text">Read external storage and audio record permissions are need to correctly app work</string>
    <string name="permission_granted">All permissions granted. Thank you</string>
    <string name="button_ok">OK</string>
    <string name="button_enter">Enter</string>
    <string name="search_media_files_title">You can search media files now or skip this step. Search now?</string>
    <string name="search_media_files_success">Searching files has been completed. Thank you</string>
    <string name="pro_user_text">You can open Cue file parser and Media Converter. Buy pro user futures?</string>
    <string name="ad_mob_remove_success">You are pro user. Thank you for support!</string>
    <string name="ad_mob_remove_skip">In the future, you can buy pro user futures and disable AdMob in the application</string>
    <string name="billing_error_purchase">Purchase error!</string>
    <string name="billing_error_not_support">Billing not support</string>
    <string name="billing_error_connection">Billing connecting error</string>
    <string name="product_price">Price:</string>
    <string name="dialog_text_exit">Are you sure you want to exit from app?</string>
    <string name="dialog_exit_title">Exit</string>
    <string name="title_settings_activity">Settings</string>
    <string name="title_about_activity">About</string>
    <string name="title_playlist_activity">Playlist</string>
    <string name="title_cue_activity">Cue file parser</string>
    <string name="title_cut_activity">Cut file</string>
    <string name="title_converter_activity">Media Converter</string>
    <string name="title_wear_activity">Wear</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="empty_music_file_artist">no artist</string>
    <string name="empty_music_file_title">no title</string>
    <string name="empty_music_file_album">no album</string>
    <string name="empty_music_file_genre">no genre</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_title_effects">Effects</string>
    <string name="drawer_title_content">Content</string>
    <string name="drawer_item_eq">Equalizer</string>
    <string name="drawer_item_other">Other</string>
    <string name="drawer_item_reverb">Reverb</string>
    <string name="drawer_item_audio">Audio</string>
    <string name="drawer_item_video">Video</string>
    <string name="drawer_item_playlist">Playlist</string>
    <string name="drawer_item_converter">Converter</string>
    <string name="drawer_buy_pro">Buy Pro User</string>
    <string name="drawer_effects_settings">Effects Settings</string>
    <string name="drawer_item_wear">Wear</string>
    <string name="audio_tab_title_albums">AlBUMS</string>
    <string name="audio_tab_title_groups">GROUPS</string>
    <string name="hint_request">Request</string>
    <string name="request_error">Empty request</string>
    <string name="hint_artist">Artist</string>
    <string name="hint_title">Title</string>
    <string name="hint_album">Album</string>
    <string name="hint_genre">Genre</string>
    <string name="button_save_track_info_text">Save</string>
    <string name="dialog_delete_file_title">Attention</string>
    <string name="dialog_delete_file_message">Do you want delete this file?</string>
    <string name="dialog_delete_folder_message">Do you want delete this folder?</string>
    <string name="shackbar_delete_file">The video file has been deleted</string>
    <string name="shackbar_delete_audio_file">The audio file has been deleted</string>
    <string name="shackbar_delete_folder">The folder with files has been deleted</string>
    <string name="shackbar_connection_error">Internet connection error!</string>
    <string name="shackbar_connection_slow">Internet connection slow!</string>
    <string name="shackbar_connection_repeat">Repeat</string>
    <string name="dialog_fetch_folder_name">Searching folders....</string>
    <string name="dialog_fetch_file_name">Searching files....</string>
    <string name="dialog_fetch_title">Please wait, searching for new data</string>
    <string name="dialog_refresh_folders_title">Audio search</string>
    <string name="dialog_refresh_folders_message">Do you want to perform a full search for audio files?</string>
    <string name="dialog_refresh_video_title">Video search</string>
    <string name="dialog_refresh_video_message">Do you want to perform a full search for video files?</string>
    <string name="dialog_ok">YES</string>
    <string name="dialog_cancel">NO</string>
    <string name="context_menu_audio_details">Details</string>
    <string name="context_menu_audio_search_data">Album info search</string>
    <string name="context_menu_audio_delete">Delete folder</string>
    <string name="context_menu_video_delete">Delete video</string>
    <string name="context_menu_video_add_playlist">To playlist</string>
    <string name="context_menu_cancel">Cancel</string>
    <string name="dialog_bass_boost_title">Select level:</string>
    <string name="playback_control_folder_not_selected">Folder is not selected</string>
    <string name="playback_control_track_not_selected">File is not selected</string>
    <string name="playlist_empty">Playlist is empty</string>
    <string name="content_empty">Files were not found</string>
    <string name="add_to_playlist_text">Track has been add to playlist</string>
    <string name="add_to_playlist_video_text">Video has been add to playlist</string>
    <string name="snackbar_vk_auth_error">Auth error</string>
    <string name="snackbar_file_not_exist">File not exist</string>
    <string name="snackbar_folder_not_exist">Folder not exist</string>
    <string name="preset_spinner_none">NONE</string>
    <string name="preset_spinner_custom">CUSTOM</string>
    <string name="about_version">Version</string>
    <string name="about_contact">Contact us</string>
    <string name="about_mail">Email</string>
    <string name="settings_media_title">Media</string>
    <string name="settings_download_title">Downloading</string>
    <string name="settings_play_music">Play music when headphone plugged</string>
    <string name="settings_searching_files">Background file search</string>
    <string name="settings_view_title">View</string>
    <string name="settings_view_full_scree_enable">Enable full screen mode for audio player</string>
    <string name="settings_view_enable_app_guide">Enable app guide</string>
    <string name="splash_folder_parsing">New folder scanning:</string>
    <string name="snackbar_loading_error">Unexpected loading audio error</string>
    <string name="snackbar_chooser_extension_error">Selected wrong extension!</string>
    <string name="snackbar_chooser_file_error">Selected wrong file type!</string>
    <string name="snackbar_cue_parse_error">Error parse cue file</string>
    <string name="snackbar_unexpected_error">Unexpected error</string>
    <string name="snackbar_internet_disable_error">No internet connection</string>
    <string name="snackbar_internet_connection_error">Connection error</string>
    <string name="snackbar_server_error">Server connecting error</string>
    <string name="snackbar_auth_error">Auth error</string>
    <string name="snackbar_error_try_again">Repeat</string>
    <string name="snackbar_converter_error_path">You must select audio file for converting</string>
    <string name="snackbar_converter_error_format">You must select format for converting</string>
    <string name="snackbar_converter_error_convert">Error convert</string>
    <string name="snackbar_converter_success_convert">Convert Success!</string>
    <string name="snackbar_converter_kill_process">Command is running. Kill process!</string>
    <string name="snackbar_cut_error_file_name">You must enter correct file name</string>
    <string name="snackbar_cut_error_range">You must select cut range</string>
    <string name="snackbar_cut_error">Error cut</string>
    <string name="snackbar_cut_success">Cut file Success</string>
    <string name="search_artist_enter_error">Enter correct artist name</string>
    <string name="search_album_enter_error">Enter correct album name</string>
    <string name="search_load_album_success">The album data has been loaded success. Save cover?</string>
    <string name="ssearch_load_album_not_found">Album has not found</string>
    <string name="search_save_bitmap_error">Cover save error</string>
    <string name="search_save_bitmap_success">The cover has been saved</string>
    <string name="auth_text_login">Phone or e-mail</string>
    <string name="auth_text_password">Password</string>
    <string name="auth_text_title">Please auth in social network</string>
    <string name="auth_text_button">SignIn</string>
    <string name="snackbar_permission_title">Please turn on this permissions for using the application</string>
    <string name="snackbar_permission_button">OK</string>
    <string name="dialog_permission_title">Permissions settings</string>
    <string name="dialog_permission_message">Please turn on permission in the application settings. Open settings?</string>
    <string name="mail_subject">(Media Center) comment</string>
    <string name="mail_chooser">(Media Center) send comment</string>
    <string name="search_hint">Search Track</string>
    <string name="effect_echo_name">Echo</string>
    <string name="effect_whoosh_name">Whoosh</string>
    <string name="nav_recording_name">Recording</string>
    <string name="effect_tempo_name">Tempo</string>
    <string name="effect_pitch_shift_name">Pitch shift</string>
    <string name="snackbar_download_only_wifi">Downloading only by Wi-Fi!Change settings?</string>
    <string name="snackbar_download_only_open">Open</string>
    <string name="resize_mode_fit">Fit</string>
    <string name="resize_mode_fill">Fill</string>
    <string name="resize_mode_fixed_height">Fixed height</string>
    <string name="resize_mode_fixed_width">Fixed width</string>
    <string name="video_tracks">Video tracks</string>
    <string name="audio_tracks">Audio tracks</string>
    <string name="subtitles">Subtitles</string>
    <string name="shared_search_back" translatable="false">search_back</string>
    <string name="mail_address">fesskiev2@gmail.com</string>
    <string name="infinity_symbol">∞</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="update_no_period">Do not search files</string>
    <string name="update_period_30_minutes">30 minutes</string>
    <string name="update_period_1_hour">1 hours</string>
    <string name="update_period_3_hours">3 hours</string>
    <string name="update_period_6_hours">6 hours</string>
    <string name="update_period_24_hours">24 hours</string>
    <string name="sort_by_duration">Duration</string>
    <string name="sort_by_file_size">File size</string>
    <string name="sort_by_track_number">Track number</string>
    <string name="sort_by_timestamp">Recent</string>
    <string name="sort_title">Sorting</string>
    <string name="convert_type">Convert type</string>
    <string name="convert_file">Convert file</string>
    <string name="convert_save_folder">Folder for saving</string>
    <string name="radio_mp3">MP3</string>
    <string name="radio_flac">FLAC</string>
    <string name="radio_m4a">M4A</string>
    <string name="radio_wav">WAV</string>
    <string name="radio_aac">AAC</string>
</resources>