<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_content">
        <item android:title="@string/drawer_title_content">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/audio_content"
                        android:icon="@drawable/item_audio_icon"
                        android:title="@string/drawer_item_audio" />

                    <item
                        android:id="@+id/video_content"
                        android:icon="@drawable/item_video_icon"
                        android:title="@string/drawer_item_video" />
                </group>

            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/playlist"
            android:icon="@drawable/item_playlist_icon"
            android:title="@string/drawer_item_playlist" />
    </group>

    <group
        android:id="@+id/menu_settings"
        android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/drawer_item_settings" />
    </group>

    <group
        android:id="@+id/menu_about"
        android:checkableBehavior="single">

        <item
            android:id="@+id/about"
            android:icon="@drawable/icon_about"
            android:title="@string/drawer_item_about" />
    </group>

    <group>
        <item
            android:id="@+id/donate"
            android:icon="@drawable/icon_donate"
            android:title="@string/drawer_item_donate" />
    </group>


</menu>