<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/card_view_corner_radius"
    app:cardElevation="@dimen/card_view_elevation"
    app:contentPadding="@dimen/card_view_content_padding">

    <RadioGroup
        android:id="@+id/radioGroupTimeUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/cancelUpdateByTime"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_no_period" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/update30minuteButton"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_period_30_minutes" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/update1HourButton"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_period_1_hour" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/update3HoursButton"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_period_3_hours" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/update6HoursButton"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_period_6_hours" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/update24HoursButton"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_period_24_hours" />

    </RadioGroup>

</android.support.v7.widget.CardView>